[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "transport-fr"
version = "0.0.1"
authors = [
  { name="Maxime Kuntz", email="maxindata@gmail.com" },
]
description = "Client for French national access point for transport data API (Point d'accès national aux données de transport, transport.data.gouv.fr)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["transport", "api", "data", "france"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.urls]
Homepage = "https://github.com/maximekuntz/transport-fr"
Issues = "https://github.com/maximekuntz/transport-fr/issues"
Repository = "https://github.com/maximekuntz/transport-fr.git"
